# lung_detect

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/: styles.qss
src/: __init__.py  main.py
src/core/: ai_worker.py
src/ui/: main_window.py
